[tool.poetry]
name = "remove-bg"
version = "0.1.0"
description = "Program to remove background of the pictures"
authors = ["2Cheetah <fckninja@gmail.com>"]
readme = "README.md"
packages = [{include = "remove_bg"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rembg = "^2.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
